--- a/html/aula06/style.css
+++ b/html/aula06/style.css
@@ -1,13 +1,14 @@
 /* Comentário no CSS */
 
 body{
-    background-color: lightgray;
+    background: linear-gradient(to bottom right, rgb(5, 247, 255), rgb(252, 2, 218));
 }
 
 
 
 header{
-    background-color: lightblue;
+    background: linear-gradient(to right, rgb(255, 166, 1), rgb(104, 0, 223));
+    
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: auto;
@@ -20,7 +21,7 @@ header{
 }
 
 nav{
-    background-color: grey;
+    background: linear-gradient(to left, rgb(255, 166, 1), rgb(104, 0, 223));
     border: 3px double lightblue;
     color: lightblue;
     text-align: center;
@@ -60,13 +61,41 @@ nav{
     margin-left: 320px;
 }
 
-.sepia{
-    width: 50%;
-    height: 50%;
-    display: block;
-    border-radius: 30%;
+.figura img{
     border: 3px solid black;
+    border-radius: 30%;
+    display: block;
+    height: 50%;
+    margin-left: auto;
+    width: 50%;
+}
+
+.figura figcaption{
+    margin-left: 50%;
+}
+
+.sepia{
     filter: sepia(80%);
     -webkit-box-reflect: left;
-    margin-left: auto;
+    
+}
+
+.desfocado{
+    filter: blur(5px);
+}
+
+.sombra{
+    /* box-shadow: 10px 5px 5px orange; */
+    filter: drop-shadow(10px 5px 5px orange);
+}
+
+.rodape{
+    height: 40px;
+    margin: auto;
+    background-color: aqua;
+    text-align: center;
+}
+
+.rodape p{
+    padding-top: 4px;
 }
