--- a/html/aula14/style.css
+++ b/html/aula14/style.css
@@ -44,7 +44,11 @@ nav ul {
 .last-link {
   width: 15%;
   margin-left: 0.5rem;
+  display: flex;
+  flex-direction: row-reverse;
+  padding-right: 0.5rem;
 }
+
 nav li {
   margin-right: 0.5rem;
   width: 100%;
@@ -134,7 +138,9 @@ nav li a:hover {
     width: 100%;
   }
   .last-link {
-    width: 97.8%;
+    width: 98%;
+    flex-direction: column;
+    padding-right: 0rem;
   }
 
   .container {
