--- a/html/Aula17-JogoMario/style.css
+++ b/html/Aula17-JogoMario/style.css
@@ -29,11 +29,70 @@
     bottom: 0;
   }
 
+  40% {
+    bottom: 180px;
+  }
   50% {
+    bottom: 180px;
+  }
+  60% {
     bottom: 180px;
   }
 
   100% {
     bottom: 0;
   }
+}
+
+.pipe {
+  position: absolute;
+  bottom: 0;
+  width: 80px;
+  right: 40px;
+  animation: pipe-animation 1.3s infinite linear;
+}
+
+@keyframes pipe-animation {
+  from {
+    right: -80px;
+  }
+  to {
+    right: 110%;
+  }
+}
+
+.clouds {
+  width: 550px;
+  position: absolute;
+  animation: clouds-animation 70s infinite linear;
+}
+
+@keyframes clouds-animation {
+  from {
+    right: -550px;
+  }
+  to {
+    right: 100%;
+  }
+}
+
+.recomecar {
+  width: 180px;
+  padding: 10px;
+  background-color: rgb(35, 160, 35);
+  font-size: x-large;
+  color: #fff;
+  border: 0;
+  border-radius: 20px;
+  margin: 0;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  cursor: pointer;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.recomecar:hover {
+  background-color: rgb(66, 167, 66);
 }
